--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
         <div class="contato">
             <p>(11)94942-8034</p>
             <p>j.cesr.silva@gmail.com</p>
+            <p><a href="https://medium.com/@j.cesr.silva">Medium: @j.cesr.silva</a></p>
         </div>
     </footer>   
 </body>
