ajustes na pagina

--- a/index.html
+++ b/index.html
@@ -89,16 +89,56 @@
                 <button class="prev">◀</button>
                 <div class="carousel-window">
                     <div class="carousel-track">
-                        <div class="carousel-item"><a href="https://github.com/juliocesr/Controle-de-despesas" target="_blank">Controle de despesas</a></div>
-                        <div class="carousel-item"><a href="https://github.com/juliocesr/pipeline" target="_blank"></a>Pipeline</div>
-                        <div class="carousel-item"><a href="https://github.com/juliocesr/ConversorDeTextosPython" target="_blank"></a>Conversor De Textos Python</div>
-                        <div class="carousel-item"><a href="https://github.com/juliocesr/ClassificarCidadesPython" target="_blank"></a>Classificar Cidades Python</div>
-                        <div class="carousel-item"><a href="https://github.com/juliocesr/pdv" target="_blank"></a>PDV</div>
-                        <div class="carousel-item"><a href="https://github.com/juliocesr/GerenciadorDeEstoque" target="_blank"></a>Gerenciador De Estoque</div>
-                      </div>
+                        <div class="carousel-item">
+                            <div class="projects">
+                                <a class="project" href="https://juliocesr.github.io/PageAdv/" target="_blank">
+                                <img src="../imgs/advocacia.png" alt="Page Advocacia"><h2>Page Advocacia</h2></a>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="projects">
+                                <a class="project" href="https://juliocesr.github.io/pageBasic/" target="_blank">
+                                <img src="../imgs/estudio de beleza.png" alt="Page Básica">
+                                <h2>Page Básica</h2>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="projects">
+                                 <a class="project" href="" target="_blank">
+                                <img src="../imgs/fotografia.png" alt="Page Fotografia">
+                                <h2>Page Fotografia</h2>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="projects">
+                                 <a class="project" href="" target="_blank">
+                                <img src="../imgs/controleDeDespesas.png" alt="Page Fotografia">
+                                <h2>Controle De Despesas Angular e Java</h2>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="projects">
+                                <a class="project" href="" target="_blank">
+                                <img src="../imgs/controledeestoque.png" alt="Page Fotografia">
+                                <h2>Controle de Estoque</h2>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="carousel-item"><a href="projetos/landingPages.html" target="_blank">Landing pages</a></div>
+                        <div class="carousel-item"><a href="https://github.com/juliocesr/pipeline" target="_blank">Pipeline Python</a></div>
+                        <div class="carousel-item"><a href="https://github.com/juliocesr/ConversorDeTextosPython" target="_blank">Conversor De Textos Python</a></div>
+                        <div class="carousel-item"><a href="https://github.com/juliocesr/ClassificarCidadesPython" target="_blank">Classificar Cidades Python</a></div>
+                        <div class="carousel-item"><a href="https://github.com/juliocesr/pdv" target="_blank">PDV Java</a></div>
+                        <div class="carousel-item"><a href="https://github.com/juliocesr/GerenciadorDeEstoque" target="_blank">Gerenciador De Estoque Java</a></div>
+                    </div>
                 </div>
                 <button class="next">▶</button>
-            </div>              
+
+                
+            </div>     
         </section>
 
     </main>
