--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
                         <div class="carousel-item">
                             <div class="projects">
                                 <a class="project" href="https://juliocesr.github.io/PageAdv/" target="_blank">
-                                <img src="../imgs/advocacia.png" alt="Page Advocacia"><h2>Page Advocacia</h2></a>
+                                <img src="imgs/advocacia.png" alt="Page Advocacia"><h2>Page Advocacia</h2></a>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div class="projects">
                                 <a class="project" href="https://juliocesr.github.io/pageBasic/" target="_blank">
-                                <img src="../imgs/estudio de beleza.png" alt="Page Básica">
+                                <img src="imgs/estudio de beleza.png" alt="Page Básica">
                                 <h2>Page Básica</h2>
                                 </a>
                             </div>
@@ -106,7 +106,7 @@
                         <div class="carousel-item">
                             <div class="projects">
                                  <a class="project" href="" target="_blank">
-                                <img src="../imgs/fotografia.png" alt="Page Fotografia">
+                                <img src="imgs/fotografia.png" alt="Page Fotografia">
                                 <h2>Page Fotografia</h2>
                                 </a>
                             </div>
@@ -114,7 +114,7 @@
                         <div class="carousel-item">
                             <div class="projects">
                                  <a class="project" href="" target="_blank">
-                                <img src="../imgs/controleDeDespesas.png" alt="Page Fotografia">
+                                <img src="imgs/controleDeDespesas.png" alt="Page Fotografia">
                                 <h2>Controle De Despesas Angular e Java</h2>
                                 </a>
                             </div>
@@ -122,7 +122,7 @@
                         <div class="carousel-item">
                             <div class="projects">
                                 <a class="project" href="" target="_blank">
-                                <img src="../imgs/controledeestoque.png" alt="Page Fotografia">
+                                <img src="imgs/controledeestoque.png" alt="Page Fotografia">
                                 <h2>Controle de Estoque</h2>
                                 </a>
                             </div>
