--- a/index.html
+++ b/index.html
@@ -26,11 +26,9 @@
     <main class="main">
         <section class="fade-in" id="main">
             <p>
-                Olá! Meu nome é Julio e sou um desenvolvedor fullstack apaixonado por criar interfaces modernas, acessíveis e responsivas. 
-                Gosto de transformar ideias em experiências digitais simples e eficientes.
-                Tenho experiência com HTML, CSS, JavaScript e frameworks como Angular. 
-                Estou sempre em busca de aprender novas tecnologias e participar de projetos que desafiem minha criatividade.
-              </p>
+                Olá! Meu nome é Julio e sou um profissional multidisciplinar com experiência sólida como desenvolvedor fullstack, engenharia de dados e em gestão de identidades e acessos (IAM). Sou apaixonado por transformar ideias em soluções tecnológicas modernas, acessíveis e seguras.    
+                Estou sempre em busca de novos desafios, aprendizados e projetos que unam inovação, segurança e impacto real.
+            </p>
         </section>
         <section class="fade-in" id="sobre">
             <h2>Sobre mim</h2>
